[package]
name = "management_system_server"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
log = "0.4.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.3", features = ["postgres","r2d2"] }